About Me Photo Repair

--- a/index.html
+++ b/index.html
@@ -42,7 +42,7 @@
             <div class="container">
                 <div class="row">
                     <div class="about-col-1">
-                        <img src="images/about_me_photo.jpg" alt="my photo"> <!-- Informal Photo to be added -->
+                        <img src="Images/about_me_photo.jpg" alt="my photo"> <!-- Informal Photo to be added -->
                     </div>
                     <div class="about-col-2">
                         <h1 class="sub-title">About Me</h1>
