--- a/index.html
+++ b/index.html
@@ -257,7 +257,7 @@
                 </span>
             </li>
             <li>
-                <h3>Other Programming Languages (XML, MySQL, C, GNU Octave</h3>
+                <h3>Other Programming Languages (XML, MySQL, C, GNU Octave)</h3>
                 <span class="bar">
                     <span class="other-prog-lang">
                     </span>
