Added Website Logo

--- a/index.html
+++ b/index.html
@@ -10,6 +10,7 @@
         <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/swiper/swiper-bundle.min.css" />
         <link rel="stylesheet" href="Icons/academicons-1.9.3/academicons-1.9.3/css/academicons.min.css ">
         <title>Jayston's Portfolio Website</title>
+        <link rel = "icon" href ="Images/website logo.PNG" type = "image/x-icon">
         <script src="https://kit.fontawesome.com/8ab52d153a.js" crossorigin="anonymous"></script>
     </head>
     <body>
