--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
         <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.2.1/css/all.min.css" integrity="sha512-MV7K8+y+gLIBoVD59lQIYicR65iaqukzvf/nwasF0nqhPay5w/9lJmVM2hMDcnK1OnMGCdVK+iQrJ7lzPJQd1w==" crossorigin="anonymous" referrerpolicy="no-referrer" />
         <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/swiper/swiper-bundle.min.css" />
         <link rel="stylesheet" href="Icons/academicons-1.9.3/academicons-1.9.3/css/academicons.min.css ">
-        <title>Jayston's Portfolio Website</title>
+        <title>Portfolio</title>
         <link rel = "icon" href ="Images/website logo.PNG" type = "image/x-icon">
         <script src="https://kit.fontawesome.com/8ab52d153a.js" crossorigin="anonymous"></script>
     </head>
