--- a/index.html
+++ b/index.html
@@ -223,7 +223,7 @@
                 </span>
             </li>
             <li>
-                <h3>CAD Packages (AutoCAD, Autodesk Inventor, Fusion 360, SoldiWorks)</h3>
+                <h3>CAD Packages (AutoCAD, Autodesk Inventor, Fusion 360, SolidWorks)</h3>
                 <span class="bar">
                     <span class="cad-packages">
                     </span>
