--- a/index.html
+++ b/index.html
@@ -274,7 +274,7 @@
                         <h1 class="sub-title">Contact Me</h1>
                         <p>
                             <i class="fa-solid fa-envelope">
-                            </i>menezes.j@northeastern.edu
+                            </i>jaystonmenezes@gmail.com
                         </p>
                         <p>
                             <i class="fa-solid fa-mobile">
