Update Github Link

--- a/index.html
+++ b/index.html
@@ -289,7 +289,7 @@
                                 <i class="fa-brands fa-twitter">
                                 </i>
                             </a>
-                            <a href="https://github.com/jam-coder-99" target="_blank">
+                            <a href="https://github.com/jayston-menezes" target="_blank">
                                 <i class="fa-brands fa-github">
                                 </i>
                             </a>
