--- a/index.html
+++ b/index.html
@@ -216,14 +216,14 @@
         </div>
         <div id="skills">
             <li>
-                <h3>Python (Libraries: Numpy, Pandas, PyQT5, Turicreate, OpenCV)</h3>
+                <h3>Python (Libraries: NumPy, Pandas, PyQt5, Turicreate, OpenCV)</h3>
                 <span class="bar">
                     <span class="python">
                     </span>
                 </span>
             </li>
             <li>
-                <h3>CAD Packages (AutoCAD, Autodesk Inventor, Fusion 360, SolidWorks)</h3>
+                <h3>CAD Packages (SolidWorks & Autodesk: AutodCAD, Inventor, Fusion 360)</h3>
                 <span class="bar">
                     <span class="cad-packages">
                     </span>
@@ -244,7 +244,7 @@
                 </span>
             </li>
             <li>
-                <h3>Documentation Tools (MS Word, MS Excel, MS PowerPoint, MS OneNote) </h3>
+                <h3>Documentation Tools (Microsoft: Word, Excel, PowerPoint, OneNote) </h3>
                 <span class="bar">
                     <span class="doc-tools">
                     </span>
