Updated_m&d_index.html

--- a/index.html
+++ b/index.html
@@ -50,17 +50,17 @@
                             <p>
                                 I am Mechanical Engineering Graduate Student at Northeastern University. My program concentration is in Mechatronics. I am also
                                 actively working as a Biomechanics Research Assistant at the <a href="https://neumove.org/" target="_blank">NeuMove
-                                Lab</a>, under the supervision of its Principal Investigator <a href="http://seungmoon.com/" target="_blank">Dr. 
+                                Lab</a>, under the supervision of its Principal Investigator, <a href="http://seungmoon.com/" target="_blank">Dr. 
                                 Seungmoon Song</a>. My interest for Mechatronics comes from the desire to find and implement programming appliations 
                                 in the field of Mechanical Engineering, to improve performance, collect & analyze data, and save time, 
-                                which I believe is the also the future of other fields too.
+                                which I believe is the future of other fields too.
                                 <br>
                                 <br>
-                                Through my academic projects and ongoing research experience, I have worked with interfacing sensors to get desired output 
+                                Through my academic projects and ongoing research, I have worked with interfacing sensors to get desired output 
                                 and also to detect anomalies in systems. My current task of working with Exoskeletons and Programmable Treadmill 
                                 has added great value to this experience. Furthermore, I have written Python Scripts to create GUI as well as to 
                                 analyze, resample, filter and label output data of hardware systems. I aspire to be a Mechatronics Engineer, 
-                                to help design assistive devices systems and implement programming logic in systems used in our daily lives.
+                                to help design assistive devices and implement programming logic in systems used in our daily lives.
                             </p>
                         </div>
                 </div>
@@ -102,7 +102,7 @@
                 <div class="edu-container left-container">
                     <a href="http://www.siesascs.edu.in/" target="_blank"><img src="Images/sies.png"></a>
                     <div class="text-box">
-                        <h2>Junior College Concentration in Electronics</h2>
+                        <h2>Junior College Specialization in Electronics</h2>
                         <h4>S.I.E.S. College of Arts, Science & Commerce</h4>
                         <h5>2015-2017</h5>
                         <p class="education-sub">➼ Aggregate: 75.85%</p>
@@ -133,14 +133,14 @@
                     <h2>Northeastern University</h2>
                     <h4>Graduate Research Assistant</h4>
                     <ul>
-                        <li>Research about developing a Virtual Neuromusuclar Controller for commanding torque for assistive walking using exoboots and Python.</li>
-                        <li>Modified existing exoboot code to execute as an offline testing code</li>
+                        <li>Research for developing a Virtual Neuromusuclar Controller to command torque for assistive walking using exoboots and Python.</li>
+                        <li>Modified existing exoboot code to execute as an offline testing code.</li>
                         <li>Programming to Resample, Filter and Clean Treadmill Data to be linked and combined with exoboot data.</li>
                     </ul>
                 </div>
                 <div id="experience-2">
                     <span class='icon-2'></span>
-                    <h2>L&T Hydrocarbon Eng.</h2>
+                    <h2>L&T Hydrocarbon Engg.</h2>
                     <h4>Mechanical Engineering Intern</h4>
                     <ul>
                         <li>Overview on the functional detais of EPCI (Engineering, Procurement, Construction & Installation) of offshore sites in the Oil & Gas Industry.</li>
@@ -152,8 +152,8 @@
                     <h2>Bharat Petroleum Corp. Ltd.</h2>
                     <h4>Mechanical Engineering Intern</h4>
                     <ul>
-                        <li>Overview of different types of pumps used in an oil and gas refinery such Submersible Pumps, Screw Pumps and Centrifugal Pumps.</li>
-                        <li>Completed a project on technical of study of disassembly, maintenance operations and assembly of Submersible Sump Pumps at the refinery's Central Engineering Workshop.</li>
+                        <li>Overview of different types of pumps used in oil and gas refinery such as Submersible Pumps, Screw Pumps and Centrifugal Pumps.</li>
+                        <li>Completed a project on the technical study of disassembly, maintenance operations and assembly of Submersible Sump Pumps at the Refinery's Central Engineering Workshop.</li>
                     </ul>
                 </div>
             </div>
@@ -180,7 +180,7 @@
                     <div class="swiper-slide">
                         <img class='img' src="Images/HM_1.png" alt="">
                         <h3>Application Software for Design of Hoisting Mechanism</h3>
-                        <p>Implemented a software for performing design calculations and analyzing stresses of all components in a hoisiting mechanism. The developed algorithm modifies dimensions to avoid failure and provides specification of standard components to be used.</p>
+                        <p>Implemented a software for performing design calculations and analyzing stresses of all components in a hoisting mechanism. The developed algorithm modifies dimensions to avoid failure and provides specification of standard components to be used.</p>
                     </div>
                     <div class="swiper-slide">
                         <img class='img' src="Images/FB_1.png" alt="">
