Updated_index.html_m&d

--- a/index.html
+++ b/index.html
@@ -223,7 +223,7 @@
                 </span>
             </li>
             <li>
-                <h3>CAD Packages (SolidWorks & Autodesk: AutodCAD, Inventor, Fusion 360)</h3>
+                <h3>CAD Packages (SolidWorks & Autodesk: AutoCAD, Inventor, Fusion 360)</h3>
                 <span class="bar">
                     <span class="cad-packages">
                     </span>
@@ -237,7 +237,7 @@
                 </span>
             </li>
             <li>
-                <h3>Web Development (HTML, CSS, Javascript)</h3>
+                <h3>Web Development (HTML, CSS, JavaScript)</h3>
                 <span class="bar">
                     <span class="web-dev">
                     </span>
