--- a/index.html
+++ b/index.html
@@ -135,7 +135,9 @@
                     <ul>
                         <li>Research for developing a Virtual Neuromusuclar Controller to command torque for assistive walking using exoboots and Python.</li>
                         <li>Modified existing exoboot code to execute as an offline testing code.</li>
-                        <li>Programming to Resample, Filter and Clean Treadmill Data to be linked and combined with exoboot data.</li>
+                        <li>Innovated Python scripts to read, resample and filter treadmill dasasta to sync with exoskeleton data.</li>
+                        <li>Conducting ongoing gait study experiments with test subjects using exoboots, mocap and treadmill setup.</li>
+                        <li>Created a machine learning model for predicting subject/treadmill speed, given IMU data.</li>
                     </ul>
                 </div>
                 <div id="experience-2">
@@ -143,8 +145,8 @@
                     <h2>L&T Hydrocarbon Engg.</h2>
                     <h4>Mechanical Engineering Intern</h4>
                     <ul>
-                        <li>Overview on the functional detais of EPCI (Engineering, Procurement, Construction & Installation) of offshore sites in the Oil & Gas Industry.</li>
-                        <li>Completed a case study on the working of Sump Caisson and recent advancements for its better functionality.</li>
+                        <li>Analyzed functional detais of EPCI (Engineering, Procurement, Construction & Installation) of offshore sites in the Oil & Gas Industry.</li>
+                        <li>Demonstrated a case study on the working of Sump Caisson and recent advancements for its better functionality.</li>
                     </ul>
                 </div>
                 <div id="experience-3">
@@ -152,8 +154,9 @@
                     <h2>Bharat Petroleum Corp. Ltd.</h2>
                     <h4>Mechanical Engineering Intern</h4>
                     <ul>
-                        <li>Overview of different types of pumps used in oil and gas refinery such as Submersible Pumps, Screw Pumps and Centrifugal Pumps.</li>
-                        <li>Completed a project on the technical study of disassembly, maintenance operations and assembly of Submersible Sump Pumps at the Refinery's Central Engineering Workshop.</li>
+                        <li>Explored different types of pumps used in oil and gas refinery such as Submersible Pumps, Screw Pumps and Centrifugal Pumps.</li>
+                        <li>Completed a technical study on disassembly, maintenance operations and assembly of Submersible Sump Pumps.</li>
+                        <li>Gained firsthand experience of the operations by using the CNC machine at the refinery’s Engineering Workshop.</li>
                     </ul>
                 </div>
             </div>
@@ -184,7 +187,7 @@
                     </div>
                     <div class="swiper-slide">
                         <img class='img' src="Images/FB_1.png" alt="">
-                        <h3>Application Software for Desing of Flat Belt Pulley</h3>
+                        <h3>Application Software for Design of Flat Belt Pulley</h3>
                         <p>Develped a software for performing design calculations for Flat Belt Pulley.The developed algorithm removes constraints on range of material selection alongside implementing Application Programming Interface (API) to provide complete design solution in Microsoft Word document.</p>
                     </div>
                     <div class="swiper-slide">
@@ -216,7 +219,7 @@
         </div>
         <div id="skills">
             <li>
-                <h3>Python (Libraries: NumPy, Pandas, PyQt5, Turicreate, OpenCV)</h3>
+                <h3>Python (Libraries: NumPy, SciPy, TensorFlow, Pandas, PyQt5, OpenCV, Matplotlib)</h3>
                 <span class="bar">
                     <span class="python">
                     </span>
