--- a/index.html
+++ b/index.html
@@ -131,16 +131,30 @@
                 <div id="experience-1">
                     <span class='icon-1'></span>
                     <h2>Northeastern University</h2>
-                    <h4>Graduate Research Assistant</h4>
+                    <h4>NeuMove Lab, Graduate Research Assistant</h4>
                     <ul>
-                        <li>Research for developing a Virtual Neuromusuclar Controller to command torque for assistive walking using exoboots and Python.</li>
-                        <li>Modified existing exoboot code to execute as an offline testing code.</li>
-                        <li>Innovated Python scripts to read, resample and filter treadmill dasasta to sync with exoskeleton data.</li>
-                        <li>Conducting ongoing gait study experiments with test subjects using exoboots, mocap and treadmill setup.</li>
-                        <li>Created a machine learning model for predicting subject/treadmill speed, given IMU data.</li>
+                        <li>Developing a Virtual Neuromusuclar Controller to command torque for assistive walking.</li>
+                        <li>Modified existing exoskeleton code architecture to execute as an emulator.</li>
+                        <li>Tuned Controller Parameter and PID Gains for optimal performance and to mimick human walking.</li>
+                        <li>Designed a position/torque control and current control experiment to validate commanded exoboot torque.</li>
+                        <li>Collaborated with research associate, for a short term, on implementing a self-pacing treadmill algorithm in MATLAB.</li>
+                        <li>Tested Achilles Tendon Sitffness on range of values to determine effect on ankle torque.</li>
                     </ul>
                 </div>
                 <div id="experience-2">
+                    <span class='icon-1'></span>
+                    <h2>Northeastern University</h2>
+                    <h4>Shepherd Lab, Graduate Research Assistant</h4>
+                    <ul>
+                        <li>Developing a gait speed and slope estimation model to predict speeds from 0-2.5 m/s range with cross-subjects accuracy.</li>
+                        <li>Created an LSTM model and Regression model to test for accuracy in speed interpolation and extrapolation scenarios.</li>
+                        <li>Collaborating with research associate on developing RNN machine learning model to estimate gait phase.</li>
+                        <li>Innovated Python scirpts to read Mo-cap system and Treadmill data at 1.2 KHz frequency.</li>
+                        <li>Applied Low-Pass filters and resampled data to synchronize with exoskeleton data at 200 Hz.</li>
+                        <li>Established experimental protocol for exoskeleton data collection sessions with 10 test subjects using treadmill and Mo-cap equipment.</li>
+                    </ul>
+                </div>
+                <div id="experience-3">
                     <span class='icon-2'></span>
                     <h2>L&T Hydrocarbon Engg.</h2>
                     <h4>Mechanical Engineering Intern</h4>
@@ -149,7 +163,7 @@
                         <li>Demonstrated a case study on the working of Sump Caisson and recent advancements for its better functionality.</li>
                     </ul>
                 </div>
-                <div id="experience-3">
+                <div id="experience-4">
                     <span class='icon-3'></span>
                     <h2>Bharat Petroleum Corp. Ltd.</h2>
                     <h4>Mechanical Engineering Intern</h4>
@@ -272,16 +286,17 @@
 <!-- Contact -->
         <div id="contact">
             <div class="container">
+                <h1 class="sub-title">Contact Me</h1>
                 <div class="row">
                     <div class="contact-left">
-                        <h1 class="sub-title">Contact Me</h1>
+                        
                         <p>
                             <i class="fa-solid fa-envelope">
-                            </i>jaystonmenezes@gmail.com
+                            </i>menezes.j@northeastern.edu
                         </p>
                         <p>
                             <i class="fa-solid fa-mobile">
-                            </i>(857)-308-7622
+                            </i>(857)308-7622
                         </p>
                         <div class="social-icons">
                             <a href="https://scholar.google.com/citations?user=NzSb5UsAAAAJ&hl=en&oi=ao" target="_blank">
